# gts

./: CMakeLists.txt  config.h.in
src/: curvature.c  triangle.c
